# Compiler

./: .gitignore  CMakeLists.txt  README.adoc
compiler/: checker.c  code_generator.c  compiler.c  debug.c  errors.c  lexer.c  polish_notation.c  semalyzer.c  synalyzer.c
compiler/debug/: debug.c  debug.h
compiler/headers/: checker.h  code_generator.h  debug.h  errors.h  instruction.h  lexer.h  line.h  polish_notation.h  semalyzer.h  synalyzer.h  token.h
compiler/input/: file.txt
test/: test
test/input/: file.txt  file2.txt  file3.txt  file4.txt  file5.txt
tools/: README.MD  mh-driver
tools/riscv/: README.MD
